--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "f9567e67-4d27-4ce9-97ff-2234deade12e"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
